<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name"><![CDATA[<font color=\"#1E581E\"><b>ВИФ</b></font> <font color=\"black\">Навигатор</font>]]></string>
  <string name="format_bold_black"><![CDATA[<font color=\"#000000\"><b>:%s</b></font>]]></string>
  <string name="main_title"><![CDATA[<font color=\"#1E581E\"><b>ВИФ2NE</b></font>]]></string>

  <string name="process_loading_message">Загрузка сообщения</string>
  <string name="error_loading_message">Не удалось скачать сообщение!</string>
  <string name="process_loading_tree">Загрузка данных</string>
  <string name="error_loading_tree">Не удалось загрузить данные!</string>
  <string name="error_auth">Неправильный логин/пароль!</string>
  <string name="process_tree">Обработка данных</string>
  <string name="error_process_tree">Не удалось обработать данные!</string>
  <string name="init_tree">Инициализация</string>
  <string name="error_init_tree">Не удалось инициализировать данные!</string>

  <string name="message_format" formatted="false"><![CDATA[
    %s<br>
    Дата <b> %s <b><br><br>
    %s
    ]]></string>

  <string name="title_format" formatted="false"><![CDATA[От <b> %s <b><br>]]></string>
  <string name="visited_mark" formatted="false"><![CDATA[(<font color=\"#1E581E\"><b>+</b></font>)]]></string>
  <string name="not_visited_mark" formatted="false"><![CDATA[(<font color=\"red\"><b>x</b></font>)]]></string>
  <string name="not_visited_mark_zero" formatted="false"><![CDATA[(<font color=\"red\"><b>o</b></font>)]]></string>
  <string name="not_visited_count" formatted="false"><![CDATA[<font color=\"red\">+%s</font>]]></string>
  <string name="visited_count_zero" formatted="false"><![CDATA[<font color=\"#1E581E\">+0</font>]]></string>
  <string name="child_count_format" formatted="false"><![CDATA[(%s)]]></string>

  <string name="button_reset" formatted="false">Сброс!</string>
  <string name="button_set_all_visited" formatted="false">Просмотрено</string>
  <string name="button_settings" formatted="false">Настройки</string>

  <string name="settings_title" formatted="false">Настройки</string>
  <string name="settings_depth" formatted="false">Глубина дерева</string>
  <string name="settings_depth_title" formatted="false">Глубина дерева в сообщении</string>
  <string name="settings_default_depth" formatted="false">5</string>
  <string name="settings_is_registered_summary" formatted="false">Есть ли регистрация на форуме</string>
  <string name="settings_is_registered_title" formatted="false">Участник форума</string>
  <string name="settings_login_title" formatted="false">Логин</string>
  <string name="settings_password_title" formatted="false">Пароль</string>

  <string name="hint_theme" formatted="false">Тема</string>
  <string name="hint_msg" formatted="false">Сообщение</string>
  <string name="check_box_to_root" formatted="false">Поместить в корень</string>
  <string name="answer_title" formatted="false">Ответ</string>
  <string name="preview_title" formatted="false">Просмотр</string>
  <string name="button_clean" formatted="false">Чистить</string>

  <string name="about_title" formatted="false">О программе</string>
  <string name="about_text" formatted="false"><![CDATA[
  <b>ВИФ Навигатор<br>
  Андроид клиент для форума VIF2NE<br><br></b>

  Версия 0.0.12 <br>
  Автор : Михаил Желудков <br>
  Лицензия : Apache License, Version 2.0 <br>
  Проект на github : https://github.com/zheludkovm/VifNavigator2 <br>
  Авторство логотипа принадлежит Alex Lee
  ]]></string>


  <string name="print_title" formatted="false">Версия для печати</string>
  <string name="main_tree_message_size" formatted="false">Max строк в дереве</string>
  <string name="sub_tree_message_size" formatted="true">Max строк в дереве сообщ.</string>

</resources>
